--- a/res/layout/tweet_item.xml
+++ b/res/layout/tweet_item.xml
@@ -44,7 +44,10 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tvName"
+        android:paddingBottom="10dp"
         android:layout_toRightOf="@+id/ivProfileImage"
+        android:autoLink="all"
+        android:linksClickable="true"
         android:text="This is the body" />
 
     <TextView
