--- a/res/menu/twitterlist.xml
+++ b/res/menu/twitterlist.xml
@@ -7,4 +7,12 @@
         android:title="Compose"
         android:onClick="onComposeAction"
         />
+    
+    <item
+        android:id="@+id/miProfile"
+        android:icon="@drawable/ic_profile"
+        android:showAsAction="always"
+        android:title="Profile"
+        android:onClick="onProfileView"
+        />
 </menu>
