--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -75,17 +75,16 @@
              android:layout_weight="1" />
 
     </LinearLayout>
-    
-     
-    <fragment
-        android:layout_below="@+id/llCounts"
-        android:id="@+id/fragmentUserTimeline"
-        android:name="com.codepath.apps.simpletwitter.fragments.UserTimelineFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        tools:layout="@layout/fragment_tweets_list" />
 
-   
+     <FrameLayout
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentRight="true" 
+         android:layout_alignParentBottom="true"
+         android:layout_below="@+id/llCounts"
+         android:id="@+id/flProfileTweets">
+
+     </FrameLayout>
 
 </RelativeLayout>
